Fixed header on mobile and desktop

--- a/www/css/mnm.css
+++ b/www/css/mnm.css
@@ -33,6 +33,20 @@ body {
     z-index: 9;
 }
 
+.header-top-wrapper.pinned {
+    position: fixed;
+    top: 0px;
+    left:0px;
+    right:0px;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
+    transition: all 1.0s ease-in-out;
+    z-index: 10;
+}
+
 .mnm-center-in-wrap {
     margin: 0 auto;
     min-width: 805px;
@@ -153,6 +167,7 @@ input[disabled], input[readonly], select[disabled], select[readonly], checkbox[d
 
 #header {
     width: 100%;
+    margin-top: 47px;
 }
 
 #header-top {
